fixing height issue on small-sized screens

--- a/data/gallery/index.css
+++ b/data/gallery/index.css
@@ -86,6 +86,7 @@ body>span {
 .entry img {
   max-height: 100%;
   object-fit: contain;
+  overflow: hidden;
 }
 
 [data-visible=false] {
